<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/top_toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:id="@+id/table_holder_pb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/layout_pb_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/header_pb"
                            style="@style/Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/header_privat" />

                        <ImageView
                            android:id="@+id/img_calendar"
                            style="@style/CalendarImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1" />

                        <EditText
                            android:id="@+id/et_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_24dp"
                            android:layout_weight="1"
                            android:focusable="false"
                            android:textAlignment="center" />

                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/layout_pb_labels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/header_pb_ccy"
                        style="@style/Header.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_pb_ccy" />

                    <TextView
                        android:id="@+id/header_pb_buy"
                        style="@style/Header.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_pb_buy"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/header_pb_sale"
                        style="@style/Header.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_pb_sale"
                        android:textAlignment="center" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/table_pb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/pb_currency_item" />

            </LinearLayout>

        </ScrollView>

        <ScrollView
            android:id="@+id/table_holder_nbu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/header_nbu"
                    style="@style/Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_nbu" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/table_nbu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/nbu_currency_item" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>